# lambk

./: .hlint.yaml  README.md  hie.yaml  lambk.cabal
app/: Main.hs
src/: CEK.hs  Kont.hs  Lamb.hs  Lambk.hs  Parser.hs  STLC.hs
test/: Main.hs
