name:                lambk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lambk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lambk
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lambk

library
  exposed-modules:
    Lamb
    Eval
    CEK
    Parser
  hs-source-dirs:
    src
  build-depends:
      base >=4.7 && <5
    , containers
    , string-interpolate
    , hspec
    , unicode-show
    , mtl
  default-language: Haskell2010

test-suite lambk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hspec
                     , lambk
